<resources>
    <string name="app_name">memegeneratorabschlussprojektgoekhankorkmaz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help">Help</string>
    <string name="contact">Contact</string>
    <string name="exit">Exit</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="top_text">Top Text</string>
    <string name="bottom_text">Bottom Text</string>
    <string name="create_meme">Create Meme</string>
</resources>

